fix:User Controller and add authController
