# server/swagger_output.json
@@ -5,7 +5,7 @@
     "title": "GreenWallet API",
     "description": "API para controle de finanças pessoais"
   },
-  "host": "localhost:8000",
+  "host": "localhost:8001",
   "basePath": "/",
   "schemes": [
     "http"
@@ -224,11 +224,11 @@
           }
         ],
         "responses": {
-          "401": {
-            "description": "Unauthorized"
+          "200": {
+            "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
